<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_temporal"
    tools:context=".presentation.ui.activity.RecoverPasswordActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary2"
        android:elevation="5dp">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/animation_email"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/nuevacontrasena"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/text_changePassword_security"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/text_changePassword_upperCase"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/text_changePassword_number"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/text_changePassword_textSpecial"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/text_changePassword_user"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="RtlCompat" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordOld_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/RedThemeInput"
                app:errorTextAppearance="@style/error_appearance"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/text_secondary">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordOld"
                    style="@style/LightAppSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_password"
                    android:drawablePadding="8dp"
                    android:hint="Contraseña Antigua"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordNew_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/RedThemeInput"
                app:errorTextAppearance="@style/error_appearance"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/text_secondary">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordNew"
                    style="@style/LightAppSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_password"
                    android:drawablePadding="8dp"
                    android:hint="Contraseña Nueva"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdatePassword"
                style="@style/MainButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Actualizar" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>